k8s/fastapi_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-demo-service
spec:
  selector:
    app: python-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
